kubernetes/zoom-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zoom-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:228907518146:certificate/7f28e58e-e411-44c2-a882-0a8830523e8c
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/healthcheck-path: "/sign-in"
    alb.ingress.kubernetes.io/group.name: "eks-zoom"
spec:
  rules:
    - host: zoom.codesplus.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zoom-service
                port:
                  number: 80
